--- a/src/components/collections-item/CollectionsItemStyle.scss
+++ b/src/components/collections-item/CollectionsItemStyle.scss
@@ -3,7 +3,13 @@
   display: flex;
   flex-direction: column;
   height: 350px;
+  margin-right: 10px;
   align-items: center;
+  transition: transform 450ms;
+
+  &:hover {
+    transform: scale(1.08);
+  }
 
   .image {
     width: 100%;
