--- a/src/pages/collections/CollectionsItemsStyle.scss
+++ b/src/pages/collections/CollectionsItemsStyle.scss
@@ -9,7 +9,15 @@
   }
 
   .items {
-    display: flex;
+    /*display: flex;*/
+    display: -webkit-inline-box;
     justify-content: space-between;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+
+    &::-webkit-scrollbar{
+      /*display: none;*/
+    }
   }
 }
